# du1906_esp

./: .gitignore  LICENSE  README.md
du1906/: Makefile  partitions.csv  sdkconfig
du1906/components/app_init/: CMakeLists.txt  app_control.c  app_player_init.c  app_sys_tools.c  print_sys_state.c
du1906/components/app_task_list/: app_task_register.c  component.mk
du1906/components/audio_flash_tone/: audio_tone_uri.c  audio_tone_uri.h  component.mk
du1906/components/audio_player/: audio_player.c  audio_player_helper_default.c  audio_player_helper_raw.c  audio_player_helper_sd.c  audio_player_manager.c  audio_player_pipeline_int_tone.c  ble_gatts_module.c
du1906/components/bds_light/: CMakeLists.txt  component.mk
du1906/components/bds_light/include/: bds_client_command.h  bds_client_context.h  bds_client_event.h  bds_client_params.h  bds_common_utility.h
du1906/components/bds_private/: bds_private.c  component.mk
du1906/components/bdsc_auth/: auth_task.c  component.mk  server_root_cert.pem
du1906/components/bdsc_cloud_log/: CMakeLists.txt  Kconfig  app_cloud_log.c  component.mk  http_channel.c  https_channel.c  mqtt_channel.c
du1906/components/bdsc_dispatcher/: CMakeLists.txt  Kconfig  bdsc_cmd.c  bdsc_engine.c  bdsc_event_dispatcher.c  component.mk  raw_play_task.c
du1906/components/bdsc_dm/: CMakeLists.txt  component.mk  cupid_device_manager.c
du1906/components/bdsc_http/: CMakeLists.txt  bdsc_http.c
du1906/components/bdsc_json/: CMakeLists.txt  bdsc_json.c  component.mk
du1906/main/: CMakeLists.txt  component.mk  main.c  version.h
(+157 files in other folders)
